--- a/mavis-frontend/src/index.css
+++ b/mavis-frontend/src/index.css
@@ -1,10 +1,15 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+  padding-top: 48px; /* Offset fixed header */
+  font-family: 'Rubik', sans-serif;
+
+  /* font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+    sans-serif; */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  background: #55efc4;
 }
 
 code {
@@ -12,6 +17,9 @@ code {
     monospace;
 }
 
+.logo {
+  font-size: 36px;
+}
 .hidden { 
   display: none;
 }
@@ -25,6 +33,11 @@ code {
   float: right;
 }
 
+.center {
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .nav-button {
   display: inline;
   margin: 5px;
@@ -32,7 +45,56 @@ code {
 
 .navbar {
   background-color: azure;
-  height: 100px;
+  height: 48px;
   width: 100%;
   display: inline-block;
+  left:0;
+  top: 0;
+  position: fixed;
+  box-shadow: 0px -5px 35px #888888;
+}
+
+.buying-power {
+  position: absolute;
+  right: 25px;
+  top: 7px;
+}
+.percent {
+  font-style: italic;
+  margin-left: 5px;
+}
+
+.positive-change {
+  color: #00b894;
+}
+
+.negative-change {
+  color: #d63031;
+}
+
+.stock-card {
+  background: #ffffff;
+  width: 420px;
+  margin-left: auto;
+  margin-right: auto;
+  padding:20px;
+  border-radius: 5px;
+  box-shadow: 1px 3px 3px #888888;
+}
+
+.stock-header {
+  padding: 10px;
+}
+
+.stock-body.open {
+  height: 360px;
+
+}
+.stock-body.closed {
+  height: 40px;
+
+}
+
+.stock-controls {
+  padding: 10px;
 }
